--- a/template/src/modules/layout/GlobalFooter/index.less
+++ b/template/src/modules/layout/GlobalFooter/index.less
@@ -1,14 +1,15 @@
+@import "~antd/lib/style/themes/default.less";
 
 .globalFooter {
   padding: 0 16px;
-  margin: 24px 0;
+  margin: 48px 0 24px;
   text-align: center;
 
   .links {
     margin-bottom: 8px;
 
     a {
-      color: fade(#000, 45%);
+      color: @text-color-secondary;
       transition: all 0.3s;
 
       &:not(:last-child) {
@@ -16,13 +17,13 @@
       }
 
       &:hover {
-        color: fade(#000, 65%);
+        color: @text-color;
       }
     }
   }
 
   .copyright {
-    color: fade(#000, 45%);
-    font-size: 14px;
+    color: @text-color-secondary;
+    font-size: @font-size-base;
   }
 }
