--- a/template/src/modules/layout/GlobalHeader/index.less
+++ b/template/src/modules/layout/GlobalHeader/index.less
@@ -1,3 +1,4 @@
+@import "~antd/lib/style/themes/default.less";
 
 .header {
   padding: 0 12px 0 0;
@@ -75,7 +76,7 @@ i.trigger {
     .avatar {
       margin: 20px 8px 20px 0;
       color: @primary-color;
-      background: #87D068;
+      background: rgba(255, 255, 255, 0.85);
       vertical-align: middle;
     }
   }
