--- a/template/public/index.html
+++ b/template/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>商户管理后台</title>
+    <title>管理后台</title>
   </head>
   <body>
     <noscript>
