--- a/template/src/components/styleComponents/JcDisplayItem/index.less
+++ b/template/src/components/styleComponents/JcDisplayItem/index.less
@@ -1,95 +1,107 @@
-.jc-display-item-container {
-  display: flex;
-  margin-bottom: 0;
-  &.label-left {
-    .ant-form-item-label {
-      text-align: left;
-    }
-  }
-
-  &.label-right {
-    .ant-form-item-label {
-      text-align: right;
-    }
-  }
-
-  .ant-form-item-label {
-    width: 70px;
-    overflow: visible;
-    flex: 1 0 70px;
-    label {
-      color: #595959;
-    }
-  }
-
-  .ant-form-item-control-wrapper {
-    width: 100%;
-    .ant-form-item-children {
-      display: inline-block;
-      width: 100%;
-    }
-  }
-
-  .ant-checkbox-group {
-    padding-top: 9px;
-  }
-
-  .item-text {
-    padding-top: 10px;
-    flex: 1;
+:global {
+  .jc-display-item-container {
     display: flex;
-    color: #000;
-    margin-left: 8px;
-    flex-direction: column;
-    > span {
-      line-height: 1.5;
+    margin-bottom: 0;
+
+    .has-error .ant-form-explain,
+    .has-error .ant-form-split {
+      color: #F5222D;
+      line-height: 1;
+      position: absolute;
+      left: 8px;
+      top: 43px;
+    }
+
+    &.label-left {
+      .ant-form-item-label {
+        text-align: left;
+      }
+    }
+
+    &.label-right {
+      .ant-form-item-label {
+        text-align: right;
+      }
+    }
+
+    .ant-form-item-label {
+      width: 70px;
+      overflow: visible;
+      flex: 1 0 70px;
+      label {
+        color: #595959;
+      }
+    }
+
+    .ant-form-item-control-wrapper {
+      width: 100%;
+      .ant-form-item-children {
+        display: inline-block;
+        width: 100%;
+      }
+    }
+
+    .ant-checkbox-group {
+      padding-top: 9px;
+    }
+
+    .item-text {
+      padding-top: 10px;
+      flex: 1;
+      display: flex;
+      color: #000;
+      margin-left: 8px;
+      flex-direction: column;
+      > span {
+        line-height: 1.5;
+      }
+    }
+
+    .ant-form-extra {
+      font-size: 12px;
+    }
+
+    .ant-form-item-required::before {
+      content: '*';
+      position: absolute;
+      font-family: SimSun;
+      line-height: 1;
+      font-size: 12px;
+      color: #F5222D;
+      left: -8px;
+      top: 4px;
     }
   }
 
-  .ant-form-extra {
-    font-size: 12px;
+  .labelWidth5 {
+    .ant-form-item-label {
+      width: 84px;
+      overflow: visible;
+      flex: 1 0 84px;
+    }
   }
 
-  .ant-form-item-required::before {
-    content: "*";
-    position: absolute;
-    font-family: SimSun;
-    line-height: 1;
-    font-size: 12px;
-    color: #F5222D;
-    left: -8px;
-    top: 4px;
+  .labelWidth6 {
+    .ant-form-item-label {
+      width: 98px;
+      overflow: visible;
+      flex: 1 0 98px;
+    }
   }
-}
 
-.labelWidth5 {
-  .ant-form-item-label {
-    width: 84px;
-    overflow: visible;
-    flex: 1 0 84px;
+  .labelWidth7 {
+    .ant-form-item-label {
+      width: 108px;
+      overflow: visible;
+      flex: 1 0 108px;
+    }
   }
-}
 
-.labelWidth6 {
-  .ant-form-item-label {
-    width: 98px;
-    overflow: visible;
-    flex: 1 0 98px;
-  }
-}
-
-.labelWidth7 {
-  .ant-form-item-label {
-    width: 108px;
-    overflow: visible;
-    flex: 1 0 108px;
-  }
-}
-
-.labelWidth8 {
-  .ant-form-item-label {
-    width: 120px;
-    overflow: visible;
-    flex: 1 0 120px;
+  .labelWidth8 {
+    .ant-form-item-label {
+      width: 120px;
+      overflow: visible;
+      flex: 1 0 120px;
+    }
   }
 }
